[gd_scene load_steps=5 format=2]

[ext_resource path="res://image/santaBag.png" type="Texture" id=1]
[ext_resource path="res://script/Santa bag.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.03478, 9.91305 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.7769, 10.5962 )

[node name="Santa bag" type="StaticBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.0261411, 0.0261411 )
texture = ExtResource( 1 )
region_rect = Rect2( 112, 32, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.3, 0.500001 )
scale = Vector2( 0.958333, 0.958333 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 0.991528, 0.982809 )
collision_layer = 16
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.3, 0.596 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="blink" type="Timer" parent="Timer"]
wait_time = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/blink" to="." method="_on_blink_timeout"]
